--- a/src/components/styles/Form.css
+++ b/src/components/styles/Form.css
@@ -37,5 +37,6 @@
 @media (max-width:1200px){
   .form{
     width:100%;
+    box-sizing: border-box;
   }
 }
